--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "nodemon": "^2.0.22"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
+    "react-icons": "^4.8.0"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "build": "npm i"
   },
   "author": "Nikhil Ganireddy",
